kubernetes/blue-green/blue-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: hello-whale-blue-svc
  labels:
    app: hello-whale-app
    version: blue
spec:
  selector:
    app: hello-whale-app
  type: LoadBalancer
  externalIPs:
    - 192.168.0.195
  ports:
  - port: 80
    targetPort: 80
