kubernetes/blue-green/blue-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blue-ingress
spec:
 rules:
  - host: hello.whale
    http:
      paths:
      - backend:
          serviceName: hello-whale-blue-svc
          servicePort: 80
